initial commit - get rid of Software Carpentry logo and IP

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,5 +1,5 @@
 <div class="banner">
-  <a href="http://software-carpentry.org" title="Software Carpentry">
-    <img alt="Software Carpentry banner" src="{{site.swc_site}}/img/software-carpentry-banner.png" />
+  <a href="http://www.psrc.org" title="Puget Sound Regional Council">
+    <img alt="PSRC banner" src="http://psrc.github.io/lib/images/psrc-logo-dull-green.png" />
   </a>
 </div>
