--- a/css/swc.css
+++ b/css/swc.css
@@ -7,11 +7,12 @@ div.container.card {
 h1, h2, h3, h4, h5, h6 {
     font-family: "Open Sans", "Helvetica", "Arial", sans-serif;
     font-weight: bold;
+    padding-top: 0.8em;
+    margin-top: 0em;
 }
 
-h1, h2 {
-    margin-top: 40px;
-    margin-bottom: 10px;
+li {
+    padding-top: 0.3em;
 }
 
 h1.title {
@@ -22,8 +23,17 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
     color: inherit;
 }
 
+h4 {
+    color: #669900;
+}
+
 h2 code, h3 code, h4 code, h5 code, h6 code {
     font-size: inherit;
+}
+
+hr {
+    padding-bottom: 0em;
+    margin-bottom: 0em;
 }
 
 /* Objectives, Callout Box, Challenges and prerequisites are now rendered as
