--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,5 +1,5 @@
 <div class="banner">
   <a href="http://www.psrc.org" title="Puget Sound Regional Council">
-    <img alt="PSRC banner" src="http://psrc.github.io/lib/images/psrc-logo-dull-green.png" />
+    <img alt="PSRC banner" src="/psrc-logo-new.png" />
   </a>
 </div>
